Home page header title changes

--- a/TheBlog/templates/home.html
+++ b/TheBlog/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %} TechDev Blog {%endblock%}
+{% block title %} Web3 Blog {%endblock%}
 {% block content %}
 <style>
     .posts img {
